[project]
name = "drf-extend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography==44.0.2",
    "django==5.2.6",
    "django-environ==0.12.0",
    "django-redis==5.4.0",
    "djangorestframework==3.16.1",
    "pycryptodome==3.20.0",
    "pyjwt==2.8.0",
    "redis==5.0.3",
]
