# 子模块 extends/common/pyproject.toml 中补充
[build-system]
requires = ["setuptools>=61.0", "wheel"] # 确保有构建工具
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."] # 从当前目录（子模块根目录）发现包

[project]
name = "drf-extend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=44.0.2",
    "django>=4.2.15",
    "django-environ>=0.12.0",
    "django-redis>=5.4.0",
    "djangorestframework>=3.15.2",
    "pycryptodome>=3.20.0",
    "pyjwt>=2.8.0",
    "redis>=5.0.3",
]
